--- a/edekessegek.html
+++ b/edekessegek.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="author" content="Lázár Boldizsár" />
         <title>Isler</title>
+        <link rel="apple-touch-icon" href="./assets/img/rumos_isler.jpg" />
+        <link rel="icon" type="image/png" href="./assets/img/rumos_isler.jpg" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="./assets/css/styles.css" rel="stylesheet" />
     </head>
     <body> 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,7 +27,7 @@
         </nav>
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="../img/legegyszerűbb_isler.png" alt="Általános házi isler" /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="./assets/img/legegyszerűbb_isler.png" alt="Általános házi isler" /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">Isler általános hozzávalói</h1>
                     <ul><b>Tésztához:</b>
