--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://th.bing.com/th/id/R.2a901e98515c1cf2a0451b53c82e8491?rik=tnv6fkIQousXnQ&riu=http%3a%2f%2f1.bp.blogspot.com%2f-KLAi-UQZUic%2fUSdMUjyhZnI%2fAAAAAAAAEMU%2fDc_QG_4YkPA%2fs1600%2fischler2.JPG&ehk=S1QNEpcvU2S%2b0708pI4L1%2b5Y6%2fjENAjbS3dEAhZYJvY%3d&risl=&pid=ImgRaw&r=0" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="./img/foisler.jpg" alt="..." /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">Mi is az Isler?</h1>
                     <p>Az isler egy csokoládékrémmel bevont, töltött, omlós tésztapárból készült kerek sütemény. Számos változata létezik: van, amely kizárólag csokoládéval készül, de lekváros és habos változatai is vannak.</p>
