--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="../img/foisler.jpg" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="/img/foisler.jpg" alt="..." /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">Mi is az Isler?</h1>
                     <p>Az isler egy csokoládékrémmel bevont, töltött, omlós tésztapárból készült kerek sütemény. Számos változata létezik: van, amely kizárólag csokoládéval készül, de lekváros és habos változatai is vannak.</p>
