--- a/tortenelme.html
+++ b/tortenelme.html
@@ -29,7 +29,7 @@
                 <div class="col-lg-3"><img class="img-fluid rounded mb-4 mb-lg-0" src="./assets/img/ferenc_jozsef.jpg" alt="Ferenc József" /></div>
                 <div class="col-lg-9">
                     <h1 class="font-weight-light">Miért, hol készítették el először?</h1>
-                    <p>A közhiedelem szerint először I. Ferenc József tiszteletére készítették az akkori Osztrák–Magyar Monarchia területén fekvő Bad Ischl fürdővárosban a ma is működő Zauner Cukrászdában (Zauner Konditorei) 1849-ben. A süteményt valóban itt találták fel, de több mint 100 évvel később: egy Richard Kurth nevű cukrász alkotta meg az 1950-es években.A közhiedelem szerint először I. Ferenc József tiszteletére készítették az akkori Osztrák–Magyar Monarchia területén fekvő Bad Ischl fürdővárosban a ma is működő Zauner Cukrászdában (Zauner Konditorei) 1849-ben. A süteményt valóban itt találták fel, de több mint 100 évvel később: egy Richard Kurth nevű cukrász alkotta meg az 1950-es években.</p>
+                    <p>A közhiedelem szerint először I. Ferenc József tiszteletére készítették az akkori Osztrák–Magyar Monarchia területén fekvő Bad Ischl fürdővárosban a ma is működő Zauner Cukrászdában (Zauner Konditorei) 1849-ben. A süteményt valóban itt találták fel, de több mint 100 évvel később: egy Richard Kurth nevű cukrász alkotta meg az 1950-es években.</p>
                     <a class="btn btn-primary" target="_blank" href="https://hu.wikipedia.org/wiki/Isler">Több információ</a>
                 </div>
             </div>
